# obs-pavirtualoutput

./: CMakeLists.txt
src/: PAVirtualOutputProps.cpp  PAVirtualOutputProps.h  PAVirtualOutputProps.ui  pavirtualoutput.cpp  pavirtualoutput.h
